# NoMus

./: .dockerignore  .env.example  .gitignore  CLAUDE.MD  CODE_REVIEW_AQUABOX.md  Dockerfile  MIGRATION_GUIDE.md  README.md  bot_flow.txt  configuration.yaml  pyproject.toml
config/environments/: development-remote.yaml  development.yaml  production.yaml  staging.yaml
config/localization/: messages.yaml
doc/: DDD_Analysis.md  bot_flow.md  sop.md
docs/: QUICKSTART_DB_TESTING.md  TEST_RESULTS.md  bot_flow.md  context_telegram_id_nomus.md  plan_telegram_id_nmservices.md  plan_telegram_id_nomus.md  sop.md  ssh_access_dm_id.md  tz_language_storage_solutions.md
docs/tasks/: MVP_PLAN.md
scripts/: run_dev.bat  run_dev.sh  run_prod.bat  run_prod.sh  run_staging.bat  run_staging.sh
src/nomus/: main.py
src/nomus/application/services/: auth_service.py  language_service.py  order_service.py
src/nomus/config/: bot_user_properties.py  default_messages.py  environment.py  settings.py
src/nomus/domain/entities/: order.py  user.py
src/nomus/domain/interfaces/: payment_interface.py  repo_interface.py  sms_interface.py
src/nomus/infrastructure/: factory.py
src/nomus/infrastructure/database/: memory_storage.py  remote_storage.py
src/nomus/infrastructure/services/: __init__.py  payment_remote.py  payment_stub.py  remote_api_client.py  sms_remote.py  sms_stub.py
src/nomus/presentation/bot/filters/: emoji_prefix_equals.py  lexicon_filter.py  text_equals.py
src/nomus/presentation/bot/handlers/: common.py  language.py  my_order.py  ordering.py  registration.py  settings.py  t_common.py
src/nomus/presentation/bot/lexicon/: en.py  lexicon.py  ru.py  uz.py  vocabulary_interface.py
src/nomus/presentation/bot/middlewares/: dependency_injection.py  l10n_middleware.py  notification_middleware.py
src/nomus/presentation/bot/states/: flow.py  language.py  ordering.py  registration.py
test/config/: test_verify_settings.py
test/infrastructure/: test_remote_services.py
test/manual/: test_registration_flow.py  test_registration_flow_en.py
test/presentation/bot/lexicon/: test_lexicon.py
tests/: test_validation.py  verify_settings.py
tests/config/: test_verify_settings.py
tests/domain/interfaces/: test_interfaces.py
tests/infrastructure/: test_remote_services.py
tests/manual/: test_api_connection.py  test_env_check.py  test_settings_load.py
tests/presentation/bot/lexicon/: test_lexicon.py
